--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% if current_user %>
-    <a href="/">Home</a>
-    <a href="/users/<%= current_user.id %>">Profile</a>
-<%= link_to "Logout", :action => "delete", :controller => :sessions, :method => :delete %>
-<% else %>
-  <a href="/">Home</a>
-  <a href="/sessions/new">Login</a>
-  <a href="/users/new">Register</a>
-<% end %>
+<div class="container">
+  <ul class="nav nav-tabs">
+    <% if current_user %>
+      <li><a href="/">Home</a></li>
+      <li><a href="/users/<%= current_user.id %>">Profile</a></li>
+      <li><%= link_to "Logout", :action => "delete", :controller => :sessions, :method => :delete %></li>
+    <% else %>
+      <li><a href="/">Home</a></li>
+      <li><a href="/sessions/new">Login</a></li>
+      <li><a href="/users/new">Register</a></li>
+    <% end %>
+  </ul>
 
 <%= yield %>
-
+</div>
 </body>
 </html>
