--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,12 +1,13 @@
-<h1>Welcome to A List For Odin</h1>
-<h3>The ultimate source for what your friends are playing</h3>
+<div>
+  <h1>Welcome to A List For Odin</h1>
+  <h3>The ultimate source for what your friends are playing</h3>
 
-<% @games.each do |each_game| %>
-  <div>
-    <%= link_to each_game.title, each_game %>
-    <p><img src="<%= each_game.thumbnail %>" alt="game-thumbnail" height='75' width='75'></p>
-  </div>
-<% end %>
+  <% @games.each do |each_game| %>
+    <div class="container">
+      <%= link_to each_game.title, each_game %>
+      <p><img src="<%= each_game.thumbnail %>" alt="game-thumbnail" height='75' width='75'></p>
+    </div>
+  <% end %>
+</div>
 
 
-    <!-- <a href="/games/<#%= each_game.id %>"> <#%#=each_game.title%> </a> -->
